--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ code {
 .App {
   background: #fff;
   width: 500px;
-  height: auto;
+  height: 600px;
   margin: 40px auto;
   border-radius: 6px;
 }
